--- a/style/css/style.css
+++ b/style/css/style.css
@@ -4,34 +4,23 @@ body {
 	color: #6A6359;
 }
 
-.title {
-	text-align: left;
+h1, h2, h3, h4, h5, h6 {
+	text-align: center;
+	font-family: 'Open Sans', 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-weight: bold;
+	color: #000;
+	position: relative;
+	margin: 0px 0px 15px 0px;
+	line-height: 1;
 }
 
-#header-title > span {
-	color: #EE7E2A;
+h1 {
+	font-size: 24px;
 }
 
-.hidden{
-	display: none;
-}
-
-.button.text {
-	font-size: 12px;
-	margin: 5px 5px 5px 0;
-	padding: 5px;
-	vertical-align: middle;
-}
-
-.button {
-	background: none repeat scroll 0 0 #EE7E2A;
-	border: medium none;
-	cursor: pointer;
-	display: inline-block;
-	margin: 8px 10px 8px 0;
-	text-shadow: none !important;
-	text-decoration: none;
-	color: #fff;
+h2 {
+	font-size: 14px;
+	color: #333;
 }
 
 section {
@@ -47,6 +36,68 @@ section {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+}
+
+.title {
+	text-align: left;
+}
+
+#header-title > span {
+	color: #EE7E2A;
+}
+
+.hidden{
+	display: none;
+}
+
+/* button */
+.button {
+	background: none repeat scroll 0 0 #EE7E2A;
+	border: medium none;
+	cursor: pointer;
+	display: inline-block;
+	margin: 8px 10px 8px 0;
+	text-shadow: none !important;
+	text-decoration: none;
+	color: #fff;
+}
+
+.button.text {
+	font-size: 12px;
+	margin: 5px 5px 5px 0;
+	padding: 5px;
+	vertical-align: middle;
+}
+
+.button.mini {
+	font-size: 9px;
+	margin: 0px;
+	padding: 5px;
+	vertical-align: middle;
+}
+
+.buttoncheck:hover,
+.button:hover {
+	background: none repeat scroll 0 0 #ffaa6b;
+}
+
+.button.mini.checked,
+.buttoncheck.checked {
+	background-color: #ffcaa3;
+}
+
+.button.modifier.mini,
+.button.colmodifier.mini {
+	padding: 2px;
+}
+
+.buttoncheck {
+	float: left;
+	display: inline-block;
+	font-size: 9px;
+	margin: 0px 0px 0px 1px;
+	padding: 2px;
+	background: none repeat scroll 0 0 #EE7E2A;
 }
 
 /**
@@ -96,8 +147,142 @@ section {
 }
 
 /**
+ * Song
+ */
+
+
+/**
  * Editor
  */
+ /* song data */
+#songdata {
+	font-size: 12px;
+	width: 260px;
+	text-align: right;
+}
+
+/* input */
+.tabsection.youtube {
+	font-size: 12px;
+}
+
+#songdata input,
+.tabsection.youtube input {
+	border: 1px solid #eee;
+	padding: 2px;
+}
+
 .tabs-editor-context-menu {
 	text-align: right;
 }
+
+.checkgroup {
+	display: inline-block;
+	margin: 5px 5px 5px 0;
+	vertical-align: middle;
+}
+
+/* section */
+.tabsection.text {
+	padding: 10px;
+	padding-bottom: 34px;
+}	
+
+.tabsection {
+	padding: 5px;
+	padding-bottom: 35px;
+}
+
+.tabsection.hover {
+	padding-bottom: 0px;
+}
+
+/* youtube */
+.tabsection.youtube {
+	font-size:12px;
+}
+
+.youtube_id_error {
+	font-weight: bold;
+	color: #f00;
+}
+
+.youtube_title {
+	color: #EE7E2A
+}
+
+/** 
+ *tabblock
+ */
+.tabblock {
+	table-layout: fixed;
+	font-size: 10px;
+	color: #000;
+	outline: none;
+	border-left: 4px solid #fff;
+}
+
+.tabblock:focus {
+	padding: 10px;
+	border-left: 4px solid #ffaa6b;
+}
+
+table { 
+  border-spacing: 0;
+  border-collapse: collapse;
+}
+
+.tabblock td {
+	border: none; /*1px solid #aaa;*/
+	cursor: pointer;
+	text-align: center;
+	background: url('../images/cell.gif') repeat-x center center;
+	white-space: nowrap;
+}
+
+.barline_simple {
+	background: url('../images/barline_simple_black.png') repeat-x center center;
+	height: 12px;
+}
+
+.tabblock td.lfinger1 {
+	background: url('../images/cell.gif') repeat-x center center, 
+				url('../images/1_black.png') no-repeat top right;	
+}
+
+.tabblock td.lfinger2 {
+	background: url('../images/cell.gif') repeat-x center center, 
+				url('../images/2_black.png') no-repeat top right;	
+}
+
+.tabblock td.lfinger3 {
+	background: url('../images/cell.gif') repeat-x center center, 
+				url('../images/3_black.png') no-repeat top right;	
+}
+
+.tabblock td.lfinger4 {
+	background: url('../images/cell.gif') repeat-x center center, 
+				url('../images/4_black.png') no-repeat top right;	
+}
+
+.tabblock td.string-note {
+	background: none;
+}
+
+.tabblock td.active_cell.active_column {
+	background-color: #ee0;
+}
+
+.tabblock td.active_column {
+	background-color: #ff9;
+}
+
+#tabblock {
+	background-color: #fff;
+	padding: 10px;
+}	
+
+
+
+
+
